[gd_scene load_steps=4 format=3 uid="uid://bn7vsp72o8foj"]

[ext_resource type="Script" path="res://scripts/hat_1.gd" id="1_37ukv"]
[ext_resource type="Texture2D" uid="uid://ddaconsdq60ft" path="res://Assets/speedPU.png" id="2_1uyt3"]

[sub_resource type="CircleShape2D" id="CircleShape2D_v2t6x"]
radius = 20.0

[node name="hat1" type="Area2D" groups=["hat1", "hats"]]
script = ExtResource("1_37ukv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_v2t6x")

[node name="on_ground_timer" type="Timer" parent="."]
wait_time = 5.0

[node name="SpeedPu" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(0, 1)
scale = Vector2(0.13, 0.13)
texture = ExtResource("2_1uyt3")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="on_ground_timer" to="." method="_on_on_ground_timer_timeout"]
